--- a/src/assets/antd-custom.less
+++ b/src/assets/antd-custom.less
@@ -1,10 +1,15 @@
 @primary-color: #264c59;
-@info-color: @blue-6;
+@info-color: #42978c;
 @success-color: #42978c;
 @processing-color: @primary-color;
 @error-color: #d46b4c;
-@highlight-color: #d46b4c;
+@highlight-color: #f8de79;
 @warning-color: #f8ae68;
-@normal-color: #d9d9d9;
-@white: #fff;
-@black: #000;
+@normal-color: @primary-color;
+
+@text-color: @primary-color;
+@heading-color: @primary-color;
+
+@font-family: "Montserrat", sans-serif;
+
+@input-bg: "#f0f2f5";
