--- a/src/assets/antd-custom.less
+++ b/src/assets/antd-custom.less
@@ -1,15 +1,15 @@
-@primary-color: #264c59;
-@info-color: #42978c;
-@success-color: #42978c;
+@primary-color: #4157a4;
+@info-color: #69b1e2;
+@success-color: #29aa59;
 @processing-color: @primary-color;
-@error-color: #d46b4c;
-@highlight-color: #f8de79;
-@warning-color: #f8ae68;
-@normal-color: @primary-color;
+@error-color: #f05044;
+@highlight-color: #edcb5e;
+@warning-color: #f59bb9;
+@normal-color: #383549;
 
-@text-color: @primary-color;
-@heading-color: @primary-color;
+@text-color: @normal-color;
+@heading-color: @normal-color;
 
 @font-family: "Montserrat", sans-serif;
 
-@input-bg: "#f0f2f5";
+@input-bg: "#f2f2f2";
